@@ -12,10 +12,12 @@ namespace RedVentures.Bot_O_Mat.API.Data
         public BotOMatContext(DbContextOptions options) : base(options) { }
 
         public DbSet<Robot> Robots { get; set; }
+        public DbSet<Cyborg> Cyborgs { get; set; }
         public DbSet<Errand> Errands { get; set; }
 
         protected override void OnModelCreating(ModelBuilder modelBuilder)
         {
+            #region enum conversions
             // https://docs.microsoft.com/en-us/ef/core/modeling/value-conversions
             modelBuilder
                 .Entity<Robot>()
@@ -23,18 +25,43 @@ namespace RedVentures.Bot_O_Mat.API.Data
                 .HasConversion(
                     v => v.ToString(),
                     v => (RobotType)Enum.Parse(typeof(RobotType), v));
+
+            modelBuilder
+                .Entity<Cyborg>()
+                .Property(e => e.Gender)
+                .HasConversion(
+                    v => v.ToString(),
+                    v => (Gender)Enum.Parse(typeof(Gender), v));
+
             modelBuilder
                 .Entity<Errand>()
                 .Property(e => e.Status)
                 .HasConversion(
                     v => v.ToString(),
-                    v => (ErrandStatus)Enum.Parse(typeof(ErrandStatus), v));
+                    v => (ErrandStatus)Enum.Parse(typeof(ErrandStatus), v)); 
+            #endregion
 
+            #region relationship maps
             modelBuilder
                 .Entity<Robot>()
                 .HasMany(e => e.Errands)
                 .WithOne(e => (Robot)e.Actor)
-                .HasForeignKey(e=>e.ActorId);
+                .HasForeignKey(e => e.ActorId);
+
+            modelBuilder
+                .Entity<Cyborg>()
+                .HasMany(e => e.Errands)
+                .WithOne(e => (Cyborg)e.Actor)
+                .HasForeignKey(e => e.ActorId);
+            #endregion
+
+            #region discriminator maps
+            //https://www.learnentityframeworkcore.com/configuration/fluent-api/hasdiscriminator-method
+            modelBuilder.Entity<ErrandActor>()
+                .HasDiscriminator<ActorType>("ActorType")
+                .HasValue<Robot>(ActorType.Robot)
+                .HasValue<Cyborg>(ActorType.Cyborg); 
+            #endregion
 
             //Seed(modelBuilder);
         }
