@@ -1,0 +1,9 @@
+﻿using RedVentures.Bot_O_Mat.API.Data.Enums;
+
+namespace RedVentures.Bot_O_Mat.API.Data.DbSets
+{
+    public class Cyborg : ErrandActor
+    {
+        public Gender Gender { get; set; }
+    }
+}
