@@ -5,14 +5,10 @@ using System.ComponentModel.DataAnnotations;
 
 namespace RedVentures.Bot_O_Mat.API.Data.DbSets
 {
-    public class Robot : Base, ICanPerformErrand
+    public class Robot : ErrandActor
     {
-        [Required, MaxLength(50), MinLength(3)]
-        public string Name { get; set; }
         [Required]
         public RobotType Type { get; set; }
-        public ICollection<Errand> Errands { get; set; }
-        public int ActorType { get => (int)Type; }
 
         public Robot Scrap()
         {
