@@ -1,0 +1,13 @@
+﻿using System;
+using System.Collections.Generic;
+using System.Linq;
+using System.Threading.Tasks;
+
+namespace RedVentures.Bot_O_Mat.API.Data.Enums
+{
+    public enum ActorType
+    {
+        Robot,
+        Cyborg
+    }
+}
