@@ -1,0 +1,9 @@
+﻿namespace RedVentures.Bot_O_Mat.API.Data.Enums
+{
+    public enum Gender
+    {
+        Female,
+        Male,
+        Other
+    }
+}
