@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.0</TargetFramework>
@@ -13,6 +13,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\RedVentures.Bot-O-Mat.API\RedVentures.Bot-O-Mat.API.csproj" />
     <ProjectReference Include="..\RedVentures.Bot-O-Mat.Common\RedVentures.Bot-O-Mat.Common.csproj" />
   </ItemGroup>
 
