@@ -32,3 +32,7 @@ added put action on robotcontroller to handle errands
 modified errant to accept icanperformerrand
 added ActorType to icanperformerrand to identify 'actor level type'
 added erranservice to handle errand performance
+issues with sqllite migrations (SQLite does not support this migration operation ('DropForeignKeyOperation') forced me to drop db and migrations and re init
+	Add-Migration InitialContext -OutputDir "Data/Migrations" -Context BotOMatContext
+	update-database -Context BotOMatContext
+	I think id prefer a tpt schema but its not natively supported, so went with tph, ref: https://www.learnentityframeworkcore.com/inheritance/table-per-hierarchy
